--- a/presentation.html
+++ b/presentation.html
@@ -149,6 +149,7 @@
     </style>
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <link rel="stylesheet" href="style.css">
     <style>
     .smaller-font { font-size:14px } 
     </style>
