Changed presentation title

--- a/presentation.html
+++ b/presentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Remark UoA Template</title>
+    <title>EE209 Team 30 Recap 2020</title>
     <meta charset="utf-8">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
